--- a/style.css
+++ b/style.css
@@ -14,3 +14,10 @@ input {
 .timer {
     margin-top: 20px;
 }
+
+#notes {
+    width: 100%;
+    height: 500px;
+    font-family: monospace;
+    font-size: 14px;
+}
